--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "complex-voting",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./complex-voting",
+  "homepage": "https://smytt.github.io/complex-voting",
   "dependencies": {
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
